// Vitest Snapshot v1

exports[`InputField.vue > renders OXD InputField 1`] = `
"<div class=\\"oxd-input-group oxd-input-field-bottom-space\\" data-v-d1b4dd00=\\"\\">
  <div class=\\"oxd-input-group__label-wrapper\\" data-v-d1b4dd00=\\"\\">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"\\" data-v-d1b4dd00=\\"\\"><input class=\\"oxd-input oxd-input--active\\" data-v-d06e05c9=\\"\\"></div>
  <!--v-if-->
</div>"
`;

exports[`InputField.vue > renders OXD InputField type \`file\` 1`] = `
"<div class=\\"oxd-input-group oxd-input-field-bottom-space\\" data-v-d1b4dd00=\\"\\">
  <div class=\\"oxd-input-group__label-wrapper\\" data-v-d1b4dd00=\\"\\">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"\\" data-v-d1b4dd00=\\"\\"><input type=\\"file\\" class=\\"oxd-file-input\\" data-v-1b4b6e0f=\\"\\">
    <div class=\\"oxd-file-div oxd-file-div--active\\" data-v-1b4b6e0f=\\"\\">
      <!--v-if-->
      <div class=\\"oxd-file-input-div\\" data-v-1b4b6e0f=\\"\\">No file chosen</div><i class=\\"oxd-icon bi-upload oxd-file-input-icon\\" data-v-85cde8ca=\\"\\" data-v-1b4b6e0f=\\"\\"></i>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`InputField.vue > renders OXD InputField type \`file\` with button 1`] = `
"<div class=\\"oxd-input-group oxd-input-field-bottom-space\\" data-v-d1b4dd00=\\"\\">
  <div class=\\"oxd-input-group__label-wrapper\\" data-v-d1b4dd00=\\"\\">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"\\" data-v-d1b4dd00=\\"\\"><input type=\\"file\\" class=\\"oxd-file-input\\" data-v-1b4b6e0f=\\"\\">
    <div class=\\"oxd-file-div oxd-file-div--active\\" data-v-1b4b6e0f=\\"\\">
      <div class=\\"oxd-file-button\\" data-v-1b4b6e0f=\\"\\">Browse</div>
      <div class=\\"oxd-file-input-div\\" data-v-1b4b6e0f=\\"\\">No file chosen</div><i class=\\"oxd-icon bi-upload oxd-file-input-icon\\" data-v-85cde8ca=\\"\\" data-v-1b4b6e0f=\\"\\"></i>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`InputField.vue > renders OXD InputField type \`input\` 1`] = `
"<div class=\\"oxd-input-group oxd-input-field-bottom-space\\" data-v-d1b4dd00=\\"\\">
  <div class=\\"oxd-input-group__label-wrapper\\" data-v-d1b4dd00=\\"\\">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"\\" data-v-d1b4dd00=\\"\\"><input class=\\"oxd-input oxd-input--active\\" data-v-d06e05c9=\\"\\"></div>
  <!--v-if-->
</div>"
`;

exports[`InputField.vue > renders OXD InputField type \`textarea\` 1`] = `
"<div class=\\"oxd-input-group oxd-input-field-bottom-space\\" data-v-d1b4dd00=\\"\\">
  <div class=\\"oxd-input-group__label-wrapper\\" data-v-d1b4dd00=\\"\\">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=\\"\\" data-v-d1b4dd00=\\"\\"><textarea class=\\"oxd-textarea oxd-textarea--active oxd-textarea--resize-vertical\\" data-v-ec75bf0c=\\"\\"></textarea></div>
  <!--v-if-->
</div>"
`;
